// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version (Node-API) 1`] = `
"prisma                  : 0.0.0
@prisma/client          : 0.0.0
Computed binaryTarget   : TEST_PLATFORM
Operating System        : OS
Architecture            : ARCHITECTURE
Node.js                 : NODEJS_VERSION
TypeScript              : TYPESCRIPT_VERSION
Query Engine (Node-API) : libquery-engine ENGINE_VERSION (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node)
Schema Engine           : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM)
Schema Wasm             : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash    : ENGINE_VERSION
Studio                  : STUDIO_VERSION"
`;

exports[`version basic version 1`] = `
"prisma                : 0.0.0
@prisma/client        : 0.0.0
Computed binaryTarget : TEST_PLATFORM
Operating System      : OS
Architecture          : ARCHITECTURE
Node.js               : NODEJS_VERSION
Query Engine (Binary) : query-engine ENGINE_VERSION (at sanitized_path/query-engine-TEST_PLATFORM)
Schema Engine         : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM)
Schema Wasm           : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION"
`;

exports[`version version with custom binaries (Node-API) 1`] = `
"prisma                  : 0.0.0
@prisma/client          : 0.0.0
Computed binaryTarget   : TEST_PLATFORM
Operating System        : OS
Architecture            : ARCHITECTURE
Node.js                 : NODEJS_VERSION
TypeScript              : TYPESCRIPT_VERSION
Query Engine (Node-API) : libquery-engine ENGINE_VERSION (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Schema Engine           : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM, resolved by PRISMA_SCHEMA_ENGINE_BINARY)
Schema Wasm             : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash    : ENGINE_VERSION
Studio                  : STUDIO_VERSION"
`;

exports[`version version with custom binaries 1`] = `
"prisma                : 0.0.0
@prisma/client        : 0.0.0
Computed binaryTarget : TEST_PLATFORM
Operating System      : OS
Architecture          : ARCHITECTURE
Node.js               : NODEJS_VERSION
Query Engine (Binary) : query-engine ENGINE_VERSION (at sanitized_path/query-engine-TEST_PLATFORM, resolved by PRISMA_QUERY_ENGINE_BINARY)
Schema Engine         : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM, resolved by PRISMA_SCHEMA_ENGINE_BINARY)
Schema Wasm           : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION"
`;
